# RF-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
.docs/architecture/: agent-from-scratch-guide.md  context-compression.md  llm-client-methods.md  memory-system.md  multi-agent.md  optimization.md  react-loop.md  session-persistence.md  skill-system.md  system-overview.md
.docs/developExperience/: new-tool-and-skill-guide.md
.docs/todo/: context-compression-improvement.md  error-handling-improvement.md  memory-retrieval-optimization.md  security-enhancement.md  session-store-optimization.md  skill-trigger-improvement.md  sub-agent-state.md  tool-concurrency.md
src/quangan/: __init__.py  __main__.py  trace.py
src/quangan/agent/: __init__.py  agent.py
src/quangan/agents/: __init__.py
src/quangan/cli/: __init__.py  command_picker.py  commands.py  context.py  display.py  main.py  session_store.py
src/quangan/config/: __init__.py  llm_config.py  paths.py
src/quangan/llm/: __init__.py  _cancel_support.py  anthropic_client.py  client.py  types.py  wrapper.py
src/quangan/memory/: __init__.py  store.py  tools.py
src/quangan/skills/: __init__.py  loader.py  models.py  parser.py  validator.py
src/quangan/tools/: __init__.py  types.py  utils.py
src/quangan/utils/: errors.py  logger.py
tests/: test_async_main_init.py  test_cli_commands.py  test_cli_context.py  test_command_shared.py  test_errors.py  test_esc_interrupt.py  test_llm_retry.py  test_paths.py  test_skill_validator.py  test_tool_factory.py  test_tool_utils.py
(+39 files in other folders)
